--- a/hm_blog/templates/page-about.html
+++ b/hm_blog/templates/page-about.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block page %}
+    {% block settings %}
+        {% endblock %}
     <!-- Main container -->
     <main>
 
