--- a/hm_blog/templates/shot-gallery-for-modal.html
+++ b/hm_blog/templates/shot-gallery-for-modal.html
@@ -12,38 +12,66 @@
                 <!-- Shot and details -->
                 <div class="card no-margin-top">
                     <div class="card-block">
-                    <div class="lSSlideOuter ">
-                        <div class="lSSlideWrapper usingCss" style="transition-duration: 0ms; transition-timing-function: ease;">
-                            <ul class="image-gallery lightSlider lsGrabbing lSSlide" style="width: 2796px; transform: translate3d(-1977px, 0px, 0px); height: 350px; padding-bottom: 0%;">
-                                <li data-thumb="assets/img/shot-big-4-thumb.jpg" data-src="assets/img/shot-big-4.jpg" class="clone left" style="width: 466px; margin-right: 0px;">
-                <img src="assets/img/shot-big-4-thumb.jpg" alt="thumb">
-              </li>
-              <li data-thumb="assets/img/shot-big-1-thumb.jpg" data-src="assets/img/shot-big-1.jpg" class="lslide" style="width: 466px; margin-right: 0px;">
-                <img src="assets/img/shot-big-1-thumb.jpg" alt="thumb">
-              </li>
+                        {#                        <ul class="image-gallery">#}
+                        {#                            {% for shot_image in shot.addimages_set.all %}#}
+                        {#                                <li data-thumb="{{ shot_image.image.url }}" data-src="{{ shot_image.image.url }}">#}
+                        {#                                    <img src="{{ shot_image.image.url }}" alt="thumb">#}
+                        {#                                </li>#}
+                        {#                            {% endfor %}#}
+                        {#                        </ul>#}
+                        <div class="lSSlideOuter ">
+                            <div class="lSSlideWrapper usingCss" style="transition-duration: 0ms;">
+                                <ul class="image-gallery lightSlider lsGrabbing lSSlide"
+                                    style="width: 2796px; transform: translate3d(-589px, 0px, 0px); height: 350px; padding-bottom: 0%;">
+                                    <li data-thumb="/static/img/shot-big-4-thumb.jpg"
+                                        data-src="/static/img/shot-big-4.jpg" class="clone left"
+                                        style="width: 466px; margin-right: 0px;">
+                                        <img src="/static/img/shot-big-4-thumb.jpg" alt="thumb">
+                                    </li>
+                                    <li data-thumb="/static/img/shot-big-1-thumb.jpg"
+                                        data-src="/static/img/shot-big-1.jpg" class="lslide active"
+                                        style="width: 466px; margin-right: 0px;">
+                                        <img src="/static/img/shot-big-1-thumb.jpg" alt="thumb">
+                                    </li>
 
-              <li data-thumb="assets/img/shot-big-2-thumb.jpg" data-src="assets/img/shot-big-2.jpg" class="lslide" style="width: 466px; margin-right: 0px;">
-                <img src="assets/img/shot-big-2-thumb.jpg" alt="thumb">
-              </li>
+                                    <li data-thumb="/static/img/shot-big-2-thumb.jpg"
+                                        data-src="/static/img/shot-big-2.jpg" class="lslide"
+                                        style="width: 466px; margin-right: 0px;">
+                                        <img src="/static/img/shot-big-2-thumb.jpg" alt="thumb">
+                                    </li>
 
-              <li data-thumb="assets/img/shot-big-3-thumb.jpg" data-src="assets/img/shot-big-3.jpg" class="lslide" style="width: 466px; margin-right: 0px;">
-                <img src="assets/img/shot-big-3-thumb.jpg" alt="thumb">
-              </li>
+                                    <li data-thumb="/static/img/shot-big-3-thumb.jpg"
+                                        data-src="/static/img/shot-big-3.jpg" class="lslide"
+                                        style="width: 466px; margin-right: 0px;">
+                                        <img src="/static/img/shot-big-3-thumb.jpg" alt="thumb">
+                                    </li>
 
-              <li data-thumb="assets/img/shot-big-4-thumb.jpg" data-src="assets/img/shot-big-4.jpg" class="lslide active" style="width: 466px; margin-right: 0px;">
-                <img src="assets/img/shot-big-4-thumb.jpg" alt="thumb">
-              </li>
-            <li data-thumb="assets/img/shot-big-1-thumb.jpg" data-src="assets/img/shot-big-1.jpg" class="clone right" style="width: 466px; margin-right: 0px;">
-                <img src="assets/img/shot-big-1-thumb.jpg" alt="thumb">
-              </li></ul><div class="lSAction"><a class="lSPrev"></a><a class="lSNext"></a></div></div><ul class="lSPager lSGallery" style="margin-top: 5px; transition-duration: 400ms; width: 377.3px; transform: translate3d(0px, 0px, 0px);"><li style="width:100%;width:89.2px;margin-right:5px" class=""><a href="#"><img src="assets/img/shot-big-1-thumb.jpg"></a></li><li style="width:100%;width:89.2px;margin-right:5px"><a href="#"><img src="assets/img/shot-big-2-thumb.jpg"></a></li><li style="width:100%;width:89.2px;margin-right:5px"><a href="#"><img src="assets/img/shot-big-3-thumb.jpg"></a></li><li style="width:100%;width:89.2px;margin-right:5px" class="active"><a href="#"><img src="assets/img/shot-big-4-thumb.jpg"></a></li></ul></div>
+                                    <li data-thumb="/static/img/shot-big-4-thumb.jpg"
+                                        data-src="/static/img/shot-big-4.jpg" class="lslide"
+                                        style="width: 466px; margin-right: 0px;">
+                                        <img src="/static/img/shot-big-4-thumb.jpg" alt="thumb">
+                                    </li>
+                                    <li data-thumb="/static/img/shot-big-1-thumb.jpg"
+                                        data-src="/static/img/shot-big-1.jpg" class="clone right"
+                                        style="width: 466px; margin-right: 0px;">
+                                        <img src="/static/img/shot-big-1-thumb.jpg" alt="thumb">
+                                    </li>
+                                </ul>
+                                <div class="lSAction"><a class="lSPrev"></a><a class="lSNext"></a></div>
+                            </div>
+                            <ul class="lSPager lSGallery"
+                                style="margin-top: 5px; transition-duration: 400ms; width: 377.3px; transform: translate3d(0px, 0px, 0px);">
+                                <li style="width:100%;width:89.2px;margin-right:5px" class="active"><a href="#"><img
+                                        src="/static/img/shot-big-1-thumb.jpg"></a></li>
+                                <li style="width:100%;width:89.2px;margin-right:5px"><a href="#"><img
+                                        src="/static/img/shot-big-2-thumb.jpg"></a></li>
+                                <li style="width:100%;width:89.2px;margin-right:5px"><a href="#"><img
+                                        src="/static/img/shot-big-3-thumb.jpg"></a></li>
+                                <li style="width:100%;width:89.2px;margin-right:5px"><a href="#"><img
+                                        src="/static/img/shot-big-4-thumb.jpg"></a></li>
+                            </ul>
+                        </div>
 
-                        <ul class="image-gallery">
-                            {% for shot_image in shot.addimages_set.all %}
-                                <li data-thumb="{{ shot_image.image.url }}" data-src="{{ shot_image.image.url }}">
-                                    <img src="{{ shot_image.image.url }}" alt="thumb">
-                                </li>
-                            {% endfor %}
-                        </ul>
                         <hr>
                         <p>{{ shot.Description }}</p>
                     </div>
@@ -62,11 +90,11 @@
                     <ul class="comments">
                         <li>
                             {% for cm in comment_post %}
-                            <a href="user-profile.html"><img src="{{ cm.user.get_image }}" alt=""></a>
-                            <h6><a href="user-profile.html">{{ cm.user.username }}</a>
-                                <time datetime="2016-02-04 22:30">{{ cm.publish_date|naturaltime }}</time>
-                            </h6>
-                            <p>{{ cm.comment }}</p>
+                                <a href="{% url 'profile' shot.user.id %}"><img src="{{ cm.user.get_image }}" alt=""></a>
+                                <h6><a href="{% url 'profile' shot.user.id %}">{{ cm.user.username }}</a>
+                                    <time datetime="2016-02-04 22:30">{{ cm.publish_date|naturaltime }}</time>
+                                </h6>
+                                <p>{{ cm.comment }}</p>
                             {% endfor %}
                         </li>
 
@@ -87,17 +115,23 @@
                 <!-- User widget -->
                 <div class="sidebar-block">
                     <div class="shot-by-widget">
-                        <a href="user-profile.html"><img src="{{ shot.user.get_image }}" alt="avatar"></a>
+                        <a href="{% url 'profile' shot.user.id %}"><img src="{{ shot.user.get_image }}" alt="avatar"></a>
                         <a class="username" href="{% url 'profile' shot.user.id %}">{{ shot.user.username }}</a>
                         <p class="title">Social company</p>
                         <p class="subtitle">Ut pulvinar libero tortor, laoreet suscipit tellus varius nec.</p>
                         <ul class="user-stats">
-                            <li><a href="user-profile.html"><i>Shots</i><span>{{ shot.user.shotdetails_set.all.count }}</span></a></li>
-                            <li><a href="user-followering.html"><i>Followers</i><span>{{ shot.user.followers.all.count }}</span></a></li>
-                            <li><a href="user-followering.html"><i>Following</i><span>{{ shot.user.following.all.count }}</span></a></li>
+                            <li>
+                                <a href="user-profile.html"><i>Shots</i><span>{{ shot.user.shotdetails_set.all.count }}</span></a>
+                            </li>
+                            <li>
+                                <a href="user-followering.html"><i>Followers</i><span>{{ shot.user.followers.all.count }}</span></a>
+                            </li>
+                            <li>
+                                <a href="user-followering.html"><i>Following</i><span>{{ shot.user.following.all.count }}</span></a>
+                            </li>
                         </ul>
-                       {% if shot.user != request.user %}
-                                <ul class="col-sm-12 col-md-6 action-buttons">
+                        {% if shot.user != request.user %}
+                            <ul class="col-sm-12 col-md-6 action-buttons">
                                 {% if request.user in shot.user|get_followers %}
                                     <a class="btn btn-success follow-btn" data-id="{{ shot.user.id }}"
                                     >Unfollow</a>
@@ -105,9 +139,8 @@
                                     <a class="btn btn-success follow-btn" data-id="{{ shot.user.id }}"
                                     >Follow</a>
                                 {% endif %}
-                            {% else %}
-{#                                <a href="{% url 'update' shot.id %}">Update</a>#}
-                            {% endif %}
+                            </ul>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- END User widget -->
