--- a/hm_blog/templates/user-profile.html
+++ b/hm_blog/templates/user-profile.html
@@ -31,9 +31,8 @@
                             <li class="active"><a
                                     href="#"><i>Shots</i><span>{{ profile_user.shotdetails_set.all.count }}</span></a>
                             </li>
-                            <li class="hidden-xs"><a href="user-profile.html"><i>Likes</i><span>1.6K</span></a></li>
-                            <li><a href="{% url 'followers' user.id %}"><i>Followers</i><span>{{ shot.user.followers.all.count }}</span></a></li>
-                            <li><a href="{% url 'following' user.id %}"><i>Following</i><span>{{ shot.user.following.all.count }}</span></a></li>
+                            <li><a href="{% url 'followers' user.id %}"><i>Followers</i><span>{{ profile_user.followers.all.count }}</span></a></li>
+                            <li><a href="{% url 'following' user.id %}"><i>Following</i><span>{{ profile_user.following.all.count }}</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -41,7 +40,7 @@
             <!-- END Profile head -->
         {% endblock %}
         <!-- User shots -->
-        <section class="no-border-bottom section-sm">
+        <section class="no-border-bottom section-sm main-profile-data">
             <div class="container">
                 <div class="row">
                     <!-- Shot -->
@@ -119,5 +118,35 @@
                 })
             })
         })
+    </script>
+{% endblock %}
+{% block js %}
+    <script>
+        var fetch_data = true;
+        var page = 2;
+        var last_page = {{ page_count }}
+            $(window).on("scroll", function () {
+                var scrollHeight = $(document).height();
+                var scrollPosition = $(window).height() + $(window).scrollTop();
+                if ((scrollHeight - scrollPosition) < 8) {
+                    if (fetch_data) {
+                        fetch_data = false;
+                        $.ajax({
+                            url: "{% url 'profile' %}?page=" + page,
+                            method: "GET",
+                            success: function (data) {
+                                $(".main-profile-data").append(data);
+                                page += 1;
+                                if (page > last_page) {
+                                    fetch_data = false;
+                                }
+                                else {
+                                    fetch_data = true
+                                }
+                            }
+                        })
+                    }
+                }
+            });
     </script>
 {% endblock %}
