--- a/hm_blog/templates/user-followering.html
+++ b/hm_blog/templates/user-followering.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block settings %}
-{% endblock %}
 {% block page %}
+{#    {% block settings %}#}
+{#    {% endblock %}#}
     {% load common %}
 
     <main>
