--- a/hm_blog/templates/explore-style3-cols3.html
+++ b/hm_blog/templates/explore-style3-cols3.html
@@ -8,7 +8,7 @@
     <!-- Main container -->
     <main>
         <!-- Shots list -->
-        <section class="no-border-bottom section-sm">
+        <section class="no-border-bottom section-sm main-data">
             <div class="container">
                 <div class="row">
                     <!-- Shot -->
