--- a/hm_blog/templates/page-contact.html
+++ b/hm_blog/templates/page-contact.html
@@ -14,9 +14,30 @@
 
                 <div class="row equal-cols">
                     <div class="col-xs-12 col-sm-7">
-                        <div class="contact-map-wrapper">
-                            <div id="contact-map"></div>
-                        </div>
+{#                        <div class="contact-map-wrapper">#}
+{#                            <div id="contact-map"></div>#}
+                            <div class="mapouter">
+                                <div class="gmap_canvas">
+                                    <iframe width="600" height="500" id="gmap_canvas"
+                                            src="https://maps.google.com/maps?q=innoland&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                                    <a href="https://www.embedgooglemap.net/blog/best-wordpress-themes/">best wordpress
+                                        themes</a></div>
+                                <style>.mapouter {
+                                    position: relative;
+                                    text-align: right;
+                                    height: 500px;
+                                    width: 600px;
+                                }
+
+                                .gmap_canvas {
+                                    overflow: hidden;
+                                    background: none !important;
+                                    height: 500px;
+                                    width: 600px;
+                                }</style>
+{#                            </div>#}
+                            </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
