--- a/hm_blog/templates/shot-gallery-for-modal.html
+++ b/hm_blog/templates/shot-gallery-for-modal.html
@@ -62,8 +62,8 @@
                     <ul class="comments">
                         <li>
                             {% for cm in comment_post %}
-                            <a href="user-profile.html"><img src="{{ cm.user.get_image }}" alt=""></a>
-                            <h6><a href="user-profile.html">{{ cm.user.username }}</a>
+                            <a href="{% url 'profile' shot.user.id %}"><img src="{{ cm.user.get_image }}" alt=""></a>
+                            <h6><a href="{% url 'profile' shot.user.id %}">{{ cm.user.username }}</a>
                                 <time datetime="2016-02-04 22:30">{{ cm.publish_date|naturaltime }}</time>
                             </h6>
                             <p>{{ cm.comment }}</p>
@@ -87,7 +87,7 @@
                 <!-- User widget -->
                 <div class="sidebar-block">
                     <div class="shot-by-widget">
-                        <a href="user-profile.html"><img src="{{ shot.user.get_image }}" alt="avatar"></a>
+                        <a href="{% url 'profile' shot.user.id %}"><img src="{{ shot.user.get_image }}" alt="avatar"></a>
                         <a class="username" href="{% url 'profile' shot.user.id %}">{{ shot.user.username }}</a>
                         <p class="title">Social company</p>
                         <p class="subtitle">Ut pulvinar libero tortor, laoreet suscipit tellus varius nec.</p>
@@ -161,3 +161,72 @@
         </div>
     </div>
 </section>
+<script>
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    var csrftoken = getCookie('csrftoken');
+
+    function csrfSafeMethod(method) {
+        // these HTTP methods do not require CSRF protection
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+
+    $.ajaxSetup({
+        beforeSend: function (xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+
+    var follow_ajax = false;
+
+    $(document).ready(function () {
+        $(".follow-btn").click(function () {
+            alert("Ok")
+            var form = new FormData();
+            var button = $(this);
+            form.append("user_id", $(this).attr("data-id"));
+            if (!follow_ajax) {
+                follow_ajax = true;
+                $.ajax({
+                    type: "POST",
+                    url: '/follow/',
+                    processData: false,
+                    contentType: false,
+                    data: form,
+                    success: function (data) {
+                        follow_ajax = false;
+                        if (data.status) {
+                            // follow
+                            button.text("Unfollow")
+                        } else {
+                            // unfollow
+                            button.text("Follow")
+                        }
+                    },
+                    error: function (xhr, errmsg, err) {
+
+                        console.log(xhr, errmsg, err);
+
+                    } // end error: function
+                });
+            }
+
+        });
+    });
+</script>
