--- a/hm_blog/templates/page-search.html
+++ b/hm_blog/templates/page-search.html
@@ -32,7 +32,7 @@
                                                 class="fa fa-user-plus"></i></button>
                                     {% else %}
                                         <button class="btn btn-sm btn-success follow-btn" data-id="{{ user.id }}" style="float: right;"><i
-                                                class="fa fa-user-minus"></i></button>
+                                                class="fas fa-user-lock"></i></button>
                                     {% endif %}
 
                                     {#                                        {% if request.user in user|get_followers %}#}
