--- a/hm_blog/templates/home.html
+++ b/hm_blog/templates/home.html
@@ -29,7 +29,7 @@
 {#                        {% endif %}#}
                         </div>
                     {% endfor %}
-                    <p><a href="{% url 'forget' %}">Forgot your password?</a></p>
+                    <p><a href="#">Forgot your password?</a></p>
 
                     <div class="row">
                         <div class="col-xs-6">
